--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,6 +1,6 @@
 ---
 ---
 
-@import 'bootstrap/bootstrap';
-@import '_variables';
-@import 'main';
+@import "bootstrap/bootstrap";
+@import "variables";
+@import "main";
