--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,5 +5,5 @@
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/styles.css">
 </head>
